--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ displayName="Chat Heads"
 # A URL to query for updates for this mod. See the JSON update specification <here>
 #updateJSONURL="http://myurl.me/" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
-#displayURL="http://example.com/" #optional
+displayURL="https://www.curseforge.com/minecraft/mc-mods/chat-heads"
 # A file name (in the root of the mod JAR) containing a logo for display
 #logoFile="chat_heads.png" #optional
 # A text field displayed in the mod UI
@@ -17,7 +17,8 @@ displayName="Chat Heads"
 authors="dzwdz" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-todo
+See who are you chatting with!
+This mod adds player heads next to their chat messages.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 #[[dependencies.chat_heads]] #optional
