--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.17
-yarn_mappings=1.17+build.50
+yarn_mappings=1.17+build.13
 loader_version=0.11.6
+
+#Fabric api
+fabric_version=0.36.0+1.17
+
 # Mod Properties
 mod_version=0.3
 maven_group=dzwdz
