--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,18 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
+# check these on https://fabricmc.net/versions.html
 minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.1
 loader_version=0.11.6
 
 #Fabric api
+# check this on https://fabricmc.net/versions.html
 fabric_version=0.36.1+1.17
 
 # Mod Properties
 mod_version=0.3.1
 maven_group=dzwdz
 archives_base_name=chat_heads
+
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
