--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,17 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-# check these on https://fabricmc.net/versions.html
+org.gradle.jvmargs=-Xmx2048M
+
 minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.1
-loader_version=0.11.6
 
-#Fabric api
-# check this on https://fabricmc.net/versions.html
-fabric_version=0.36.1+1.17
-
-# Mod Properties
+archives_base_name=chat_heads
 mod_version=0.3.1
 maven_group=dzwdz
-archives_base_name=chat_heads
 
-# Dependencies
+# common
+architectury_version=2.5.+
+
+# fabric
+fabric_loader_version=0.12.1
+fabric_api_version=0.40.8+1.17
+
+# forge
+forge_version=37.0.88
