--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,17 @@ org.gradle.jvmargs=-Xmx2048M
 minecraft_version=1.17.1
 
 archives_base_name=chat_heads
-mod_version=0.3.1
+mod_version=0.4.0
 maven_group=dzwdz
 
 # common
 architectury_version=2.5.+
+cloth_config_version=5.0.38
 
 # fabric
 fabric_loader_version=0.12.1
 fabric_api_version=0.40.8+1.17
+modmenu_version=2.0.14
 
 # forge
 forge_version=37.0.88
