--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     // Remove the next line if you don't want to depend on the API
 //     modApi "dev.architectury:architectury:${rootProject.architectury_version}"
+    modApi "me.shedaniel.cloth:cloth-config:${project.cloth_config_version}"
 }
 
 architectury {
