--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -19,6 +19,12 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
 //    modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
 
+    modApi "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
+
+    modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
     implementation(project(path: ":common", configuration: "dev")) {
         transitive = false
     }
