make Cloth Config optional

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -12,6 +12,8 @@ authors = "dzwdz"
 description = '''
 See who are you chatting with!
 This mod adds player heads next to their chat messages.
+
+Has 1 whole config option if Cloth Config API is installed!
 '''
 logoFile = "icon.png"
 
@@ -31,7 +33,7 @@ side = "CLIENT"
 
 [[dependencies.chat_heads]]
 modId = "cloth_config"
-mandatory = true
+mandatory = false
 versionRange = "[5.0.0,)"
 ordering = "NONE"
 side = "CLIENT"
