--- a/common/build.gradle
+++ b/common/build.gradle
@@ -11,23 +11,11 @@ architectury {
     common()
 }
 
-configurations {
-    dev
-}
-
-artifacts {
-    dev(jar)
-}
-
 publishing {
     publications {
         mavenCommon(MavenPublication) {
             artifactId = rootProject.archives_base_name
-            // add all the jars that should be included when publishing to maven
-            artifact remapJar
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
+            from components.java
         }
     }
 
