--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,8 @@ allprojects {
         maven { url = "https://maven.terraformersmc.com/" }
     }
 
-    tasks.withType(JavaCompile) {
-        options.release = 17
+    tasks.withType(JavaCompile).configureEach {
+        it.options.release = 17
     }
 
     java {
