--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 org.gradle.jvmargs=-Xmx2048M
 
 minecraft_version=1.18.1
+enabled_platforms=fabric,forge
 
 archives_base_name=chat_heads
 mod_version=0.6.0
