--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.18.1
-enabled_platforms=fabric,forge
+minecraft_version=1.19-pre1
+enabled_platforms=fabric
 
 archives_base_name=chat_heads
 mod_version=0.6.0
 maven_group=dzwdz
 
 # common
-cloth_config_version=6.0.43
+cloth_config_version=7.0.65
 
 # fabric
-fabric_loader_version=0.12.12
-modmenu_version=3.0.0
+fabric_loader_version=0.14.5
+modmenu_version=4.0.0-beta.4
 
 # forge
 forge_version=39.0.5
