--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.19-pre1
+minecraft_version=1.19
 enabled_platforms=fabric
 
 archives_base_name=chat_heads
@@ -11,8 +11,8 @@ maven_group=dzwdz
 cloth_config_version=7.0.65
 
 # fabric
-fabric_loader_version=0.14.5
-modmenu_version=4.0.0-beta.4
+fabric_loader_version=0.14.6
+modmenu_version=4.0.0
 
 # forge
 forge_version=39.0.5
