--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.19
-enabled_platforms=fabric,forge
+minecraft_version=1.19.1
+enabled_platforms=fabric
 
 archives_base_name=chat_heads
 mod_version=0.6.2
@@ -12,7 +12,7 @@ cloth_config_version=7.0.73
 
 # fabric
 fabric_loader_version=0.14.8
-modmenu_version=4.0.4
+modmenu_version=4.0.5
 
 # forge
 forge_version=41.0.99
