--- a/settings.gradle
+++ b/settings.gradle
@@ -8,7 +8,6 @@ pluginManagement {
 }
 
 include("common")
-include("fabric")
-include("forge")
+include(enabled_platforms.split(','))
 
 rootProject.name = "chat_heads"
