--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 org.gradle.jvmargs=-Xmx2048M
 
 minecraft_version=1.19.1
-enabled_platforms=fabric
+enabled_platforms=fabric,forge
 
 archives_base_name=chat_heads
 mod_version=0.7.0
 maven_group=dzwdz
 
 # common
-cloth_config_version=7.0.73
+cloth_config_version=8.0.75
 
 # fabric
 fabric_loader_version=0.14.8
 modmenu_version=4.0.5
 
 # forge
-forge_version=41.0.99
+forge_version=42.0.1
