--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.19.1
-enabled_platforms=fabric,forge
+minecraft_version=22w42a
+enabled_platforms=fabric
 
 archives_base_name=chat_heads
 mod_version=0.7.1
@@ -11,7 +11,7 @@ maven_group=dzwdz
 cloth_config_version=8.0.75
 
 # fabric
-fabric_loader_version=0.14.8
+fabric_loader_version=0.14.10
 modmenu_version=4.0.5
 
 # forge
