--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=22w42a
+minecraft_version=1.19.3-rc1
 enabled_platforms=fabric
 
 archives_base_name=chat_heads
@@ -8,11 +8,12 @@ mod_version=0.7.1
 maven_group=dzwdz
 
 # common
-cloth_config_version=8.0.75
+cloth_config_version=9.0.93
 
 # fabric
-fabric_loader_version=0.14.10
-modmenu_version=4.0.5
+fabric_loader_version=0.14.11
+fabric_api_version=0.68.1+1.19.3
+modmenu_version=5.0.0-alpha.4
 
 # forge
 forge_version=42.0.1
