--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.19.3-rc1
+minecraft_version=1.19.3
 enabled_platforms=fabric
 
 archives_base_name=chat_heads
