--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
 org.gradle.jvmargs=-Xmx2048M
 
 minecraft_version=1.19.3
-enabled_platforms=fabric
+enabled_platforms=fabric,forge
 
 archives_base_name=chat_heads
 mod_version=0.8.0
 maven_group=dzwdz
 
 # common
-cloth_config_version=9.0.93
+cloth_config_version=9.0.94
 
 # fabric
 fabric_loader_version=0.14.11
 fabric_api_version=0.68.1+1.19.3
-modmenu_version=5.0.0-alpha.4
+modmenu_version=5.0.1
 
 # forge
-forge_version=42.0.1
+forge_version=44.0.1
