fix newlines being expanded in fabric.mod.json
It's really that shrimple, beforehand the \n in the json string was
being expanded to a literal line feed character, causing the json file
to be invalid since escape characters are not allowed inside json
string and must be escaped.

Signed-off-by: Lenny McLennington <lenny@sneed.church>

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -35,7 +35,9 @@ processResources {
     inputs.property "version", project.mod_version
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.mod_version
+        expand ("version": project.mod_version) {
+            escapeBackslash = true
+        }
     }
 }
 
