sneakily add myself as an author

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ license = "MPL-2.0"
 modId = "chat_heads"
 version = "${version}"
 displayName = "Chat Heads"
-authors = "dzwdz"
+authors = "dzwdz, Fourmisain"
 
 description = '''
 See who are you chatting with!
