--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.19.4
-enabled_platforms=fabric,forge
+minecraft_version=1.20-rc1
+enabled_platforms=fabric
 
 archives_base_name=chat_heads
 mod_version=0.10.14
 maven_group=dzwdz
 
 # common
-cloth_config_version=9.0.94
+cloth_config_version=11.0.98
 
 # fabric
 fabric_loader_version=0.14.21
-modmenu_version=6.1.0
+modmenu_version=7.0.0-beta.2
 
 # forge
 forge_version=45.0.43
