--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 org.gradle.jvmargs=-Xmx2048M
 
 minecraft_version=1.20
-enabled_platforms=fabric
+enabled_platforms=fabric,forge
 
 archives_base_name=chat_heads
 mod_version=0.10.15
 maven_group=dzwdz
 
 # common
-cloth_config_version=11.0.98
+cloth_config_version=11.0.99
 
 # fabric
 fabric_loader_version=0.14.21
-modmenu_version=7.0.0-beta.2
+modmenu_version=7.0.1
 
 # forge
-forge_version=45.0.43
+forge_version=46.0.2
