add Modrinth and CurseForge publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,11 @@ modmenu_version=7.0.1
 
 # forge
 forge_version=46.0.2
+
+# publishing
+modrinth_id=Wb5oqrBJ
+curseforge_id=407206
+fabric_game_versions=1.20, 1.20.1
+forge_game_versions=1.20, 1.20.1
+optional_modrinth_dependencies=9s6osm5g
+optional_curseforge_dependencies=cloth-config
