--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
     id "dev.architectury.loom" version "1.2-SNAPSHOT" apply false
+    id "com.matthewprenger.cursegradle" version "1.4.0" apply false
+    id "com.modrinth.minotaur" version "2.+" apply false
 }
 
 architectury {
@@ -45,8 +47,70 @@ allprojects {
     tasks.withType(JavaCompile).configureEach {
         it.options.release = 17
     }
+}
 
-    java {
-        withSourcesJar()
+subprojects {
+    def loader = project.name
+    if (!enabled_platforms.split(',').contains(loader))
+        return
+
+    version = project.mod_version + "-" + loader +  "-" + project.minecraft_version
+
+    def toList = (String s) -> s.split(',').collect{ it.trim() }
+
+    def changelogMd = rootProject.file('changelog.md').getText("UTF-8")
+    def projectGameVersions = toList(property("${loader}_game_versions".toString()) as String)
+    def lastGameVersion = projectGameVersions.last()
+
+    apply plugin: "com.modrinth.minotaur"
+
+    modrinth {
+        def MODRINTH_TOKEN = System.getenv("MODRINTH_TOKEN")
+        if (MODRINTH_TOKEN != null) {
+            token = MODRINTH_TOKEN
+            projectId = project.modrinth_id
+            versionName = project.mod_version
+            versionNumber = project.mod_version
+            versionType = "release"
+            uploadFile = remapJar
+            changelog = changelogMd
+            gameVersions = projectGameVersions
+            loaders = [loader]
+            dependencies {
+                toList(project.optional_modrinth_dependencies).each{ optional.project(it) }
+            }
+        }
+    }
+
+    apply plugin: "com.matthewprenger.cursegradle"
+
+    curseforge {
+        def CURSEFORGE_TOKEN = System.getenv("CURSEFORGE_TOKEN")
+        if (CURSEFORGE_TOKEN != null) {
+            apiKey = CURSEFORGE_TOKEN
+            project {
+                id = project.curseforge_id
+                releaseType = "release"
+                changelogType = "markdown"
+                changelog = changelogMd
+
+                addGameVersion loader.capitalize()
+                projectGameVersions.each{ addGameVersion(it) }
+
+                relations {
+                    toList(project.optional_curseforge_dependencies).each{ optionalDependency(it) }
+                }
+                mainArtifact(remapJar.archiveFile.get().asFile) {
+                    displayName = "[${loader.capitalize()} ${lastGameVersion}] ${project.mod_version}"
+                }
+                afterEvaluate {
+                    uploadTask.dependsOn("build")
+                }
+            }
+            options {
+                forgeGradleIntegration = false
+                javaVersionAutoDetect = false
+            }
+        }
     }
 }
