--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,13 @@ org.gradle.jvmargs=-Xmx2048M
 minecraft_version=1.20
 enabled_platforms=fabric,forge
 
+mod_id=chat_heads
 archives_base_name=chat_heads
 mod_version=0.10.18
 maven_group=dzwdz
 
 # common
+java_version=17
 cloth_config_version=11.0.99
 
 # fabric
@@ -20,7 +22,9 @@ forge_version=46.0.2
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
+fabric_game_version_range=>=1.20
 fabric_game_versions=1.20, 1.20.1
+forge_game_version_range=[1.20,)
 forge_game_versions=1.20, 1.20.1
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
