--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -51,3 +51,12 @@ components.java {
         skip()
     }
 }
+
+publishing {
+    publications {
+        mavenForge(MavenPublication) {
+            artifactId = rootProject.archives_base_name + "-" + project.name
+            from components.java
+        }
+    }
+}
