port to 1.20.2 (fabric only)

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,6 +2,10 @@ architectury {
     common(project.enabled_platforms.split(","))
 }
 
+loom {
+    accessWidenerPath = file("src/main/resources/chat_heads.accesswidener")
+}
+
 dependencies {
     // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
     // Do NOT use other classes from fabric loader
