--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -8,6 +8,7 @@ architectury {
 }
 
 loom {
+    accessWidenerPath = project(":common").loom.accessWidenerPath
     forge {
         mixinConfig "${project.mod_id}.mixins.json"
     }
