--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -15,6 +15,10 @@ configurations {
     developmentFabric.extendsFrom common
 }
 
+loom {
+    accessWidenerPath = project(":common").loom.accessWidenerPath
+}
+
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
 
