--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx2048M
 org.gradle.warning.mode=all
 
-minecraft_version=1.20
-enabled_platforms=fabric,forge
+minecraft_version=1.20.2
+enabled_platforms=fabric
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -11,11 +11,11 @@ maven_group=dzwdz
 
 # common
 java_version=17
-cloth_config_version=11.0.99
+cloth_config_version=12.0.108
 
 # fabric
-fabric_loader_version=0.14.21
-modmenu_version=7.0.1
+fabric_loader_version=0.14.22
+modmenu_version=8.0.0-beta.2
 
 # forge
 forge_version=46.0.2
@@ -23,9 +23,9 @@ forge_version=46.0.2
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
-fabric_game_version_range=>=1.20
-fabric_game_versions=1.20, 1.20.1
-forge_game_version_range=[1.20,)
-forge_game_versions=1.20, 1.20.1
+fabric_game_version_range=>=1.20.2
+fabric_game_versions=1.20.2
+forge_game_version_range=[1.20.2,)
+forge_game_versions=1.20.2
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
