--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.warning.mode=all
 
 minecraft_version=1.20.2
-enabled_platforms=fabric
+enabled_platforms=fabric,forge
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -11,14 +11,14 @@ maven_group=dzwdz
 
 # common
 java_version=17
-cloth_config_version=12.0.108
+cloth_config_version=12.0.109
 
 # fabric
 fabric_loader_version=0.14.22
 modmenu_version=8.0.0-beta.2
 
 # forge
-forge_version=46.0.2
+forge_version=48.0.1
 
 # publishing
 modrinth_id=Wb5oqrBJ
