--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -14,6 +14,7 @@ See who are you chatting with!
 This mod adds player heads next to their chat messages.
 '''
 logoFile = "icon.png"
+displayTest = "IGNORE_ALL_VERSION"
 
 [[dependencies.chat_heads]]
 modId = "forge"
