--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.3-SNAPSHOT" apply false
+    id "dev.architectury.loom" version "1.4-SNAPSHOT" apply false
     id "com.matthewprenger.cursegradle" version "1.4.0" apply false
     id "com.modrinth.minotaur" version "2.+" apply false
 }
@@ -74,6 +74,7 @@ subprojects {
     def changelogMd = rootProject.file('changelog.md').getText("UTF-8")
     def projectGameVersions = toList(property("${loader}_game_versions".toString()) as String)
     def lastGameVersion = projectGameVersions.last()
+    def capitalizedLoader = loader == 'neoforge' ? 'NeoForge' : loader.capitalize()
 
     apply plugin: "com.modrinth.minotaur"
 
@@ -107,14 +108,14 @@ subprojects {
                 changelogType = "markdown"
                 changelog = changelogMd
 
-                addGameVersion loader.capitalize()
+                addGameVersion capitalizedLoader
                 projectGameVersions.each{ addGameVersion(it) }
 
                 relations {
                     toList(project.optional_curseforge_dependencies).each{ optionalDependency(it) }
                 }
                 mainArtifact(remapJar.archiveFile.get().asFile) {
-                    displayName = "[${loader.capitalize()} ${lastGameVersion}] ${project.mod_version}"
+                    displayName = "[${capitalizedLoader} ${lastGameVersion}] ${project.mod_version}"
                 }
                 afterEvaluate {
                     uploadTask.dependsOn("build")
