--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.warning.mode=all
 
 minecraft_version=1.20.2
-enabled_platforms=fabric,forge
+enabled_platforms=fabric,forge,neoforge
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -11,7 +11,7 @@ maven_group=dzwdz
 
 # common
 java_version=17
-cloth_config_version=12.0.109
+cloth_config_version=12.0.111
 mixinextras_version=0.2.0
 
 # fabric
@@ -20,6 +20,7 @@ modmenu_version=8.0.0-beta.2
 
 # forge
 forge_version=48.0.1
+neoforge_version=20.2.56-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
@@ -28,5 +29,7 @@ fabric_game_version_range=>=1.20.2
 fabric_game_versions=1.20.2
 forge_game_version_range=[1.20.2,)
 forge_game_versions=1.20.2
+neoforge_game_version_range=[1.20.2,)
+neoforge_game_versions=1.20.2
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
