--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ maven_group=dzwdz
 # common
 java_version=17
 cloth_config_version=12.0.109
+mixinextras_version=0.2.0
 
 # fabric
 fabric_loader_version=0.14.22
