--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 
     modApi "me.shedaniel.cloth:cloth-config-forge:${project.cloth_config_version}"
 
+    implementation(annotationProcessor("io.github.llamalad7:mixinextras-common:${project.mixinextras_version}"))
+    implementation(include("io.github.llamalad7:mixinextras-forge:${project.mixinextras_version}"))
+
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
 }
