don't include mixinextras on fabric/neoforge but require fabric loader 0.15, neoforge 20.2.84

--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     modApi "me.shedaniel.cloth:cloth-config-neoforge:${project.cloth_config_version}"
 
     implementation(annotationProcessor("io.github.llamalad7:mixinextras-common:${project.mixinextras_version}"))
-    implementation(include("io.github.llamalad7:mixinextras-neoforge:${project.mixinextras_version}"))
+    implementation("io.github.llamalad7:mixinextras-neoforge:${project.mixinextras_version}")
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionNeoForge")) { transitive = false }
