--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -10,7 +10,7 @@ architectury {
 loom {
     accessWidenerPath = project(":common").loom.accessWidenerPath
     forge {
-        mixinConfig "${project.mod_id}.mixins.json"
+        mixinConfig "${project.mod_id}.mixins.json", "${project.mod_id}.forge.mixins.json"
     }
 }
 
