--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.warning.mode=all
 
 minecraft_version=1.20.3
-enabled_platforms=fabric
+enabled_platforms=fabric,forge,neoforge
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -19,8 +19,8 @@ fabric_loader_version=0.15.0
 modmenu_version=8.0.0-beta.2
 
 # forge
-forge_version=48.0.1
-neoforge_version=20.2.56-beta
+forge_version=49.0.2
+neoforge_version=20.3.1-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
