update version range

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,10 +26,10 @@ neoforge_version=20.3.1-beta
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
 fabric_game_version_range=>=1.20.3
-fabric_game_versions=1.20.3
+fabric_game_versions=1.20.3, 1.20.4
 forge_game_version_range=[1.20.3,)
-forge_game_versions=1.20.3
+forge_game_versions=1.20.3, 1.20.4
 neoforge_game_version_range=[1.20.3,)
-neoforge_game_versions=1.20.3
+neoforge_game_versions=1.20.3, 1.20.4
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
