--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx2048M
 org.gradle.warning.mode=all
 
-minecraft_version=1.20.3
-enabled_platforms=fabric,forge,neoforge
+minecraft_version=1.20.5
+enabled_platforms=fabric
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -10,12 +10,12 @@ mod_version=0.10.32
 maven_group=dzwdz
 
 # common
-java_version=17
+java_version=21
 cloth_config_version=12.0.111
-mixinextras_version=0.3.1
+mixinextras_version=0.3.5
 
 # fabric
-fabric_loader_version=0.15.0
+fabric_loader_version=0.15.10
 modmenu_version=8.0.0-beta.2
 
 # forge
@@ -25,11 +25,11 @@ neoforge_version=20.3.1-beta
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
-fabric_game_version_range=>=1.20.3
-fabric_game_versions=1.20.3, 1.20.4
-forge_game_version_range=[1.20.3,)
-forge_game_versions=1.20.3, 1.20.4
-neoforge_game_version_range=[1.20.3,)
-neoforge_game_versions=1.20.3, 1.20.4
+fabric_game_version_range=>=1.20.5
+fabric_game_versions=1.20.5
+forge_game_version_range=[1.20.5,)
+forge_game_versions=1.20.5
+neoforge_game_version_range=[1.20.5,)
+neoforge_game_versions=1.20.5
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
