--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.warning.mode=all
 
 minecraft_version=1.20.5
-enabled_platforms=fabric
+enabled_platforms=fabric,neoforge
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -20,7 +20,7 @@ modmenu_version=8.0.0-beta.2
 
 # forge
 forge_version=49.0.2
-neoforge_version=20.3.1-beta
+neoforge_version=20.5.0-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
