--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,5 @@
 architectury {
-    common(project.enabled_platforms.split(","))
+    common rootProject.enabled_platforms.split(',')
 }
 
 loom {
@@ -7,20 +7,10 @@ loom {
 }
 
 dependencies {
-    // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
-    // Do NOT use other classes from fabric loader
-    modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
+    // We depend on Fabric Loader here to use the Fabric @Environment annotations,
+    // which get remapped to the correct annotations on each platform.
+    // Do NOT use other classes from Fabric Loader.
+    modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
 
     modApi "me.shedaniel.cloth:cloth-config:${project.cloth_config_version}"
-
-    implementation(annotationProcessor("io.github.llamalad7:mixinextras-common:${project.mixinextras_version}"))
-}
-
-publishing {
-    publications {
-        mavenCommon(MavenPublication) {
-            artifactId = rootProject.archives_base_name
-            from components.java
-        }
-    }
 }
