--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.jvmargs=-Xmx2048M
+org.gradle.parallel=true
 org.gradle.warning.mode=all
 
 minecraft_version=1.20.5
@@ -11,12 +12,12 @@ maven_group=dzwdz
 
 # common
 java_version=21
-cloth_config_version=12.0.111
+cloth_config_version=14.0.126
 mixinextras_version=0.3.5
 
 # fabric
-fabric_loader_version=0.15.10
-modmenu_version=8.0.0-beta.2
+fabric_loader_version=0.15.11
+modmenu_version=10.0.0-beta.1
 
 # forge
 forge_version=49.0.2
