--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.parallel=true
 org.gradle.warning.mode=all
 
-minecraft_version=1.20.5
+minecraft_version=1.20.6
 enabled_platforms=fabric,neoforge
 
 mod_id=chat_heads
@@ -14,6 +14,7 @@ maven_group=dzwdz
 java_version=21
 cloth_config_version=14.0.126
 mixinextras_version=0.3.5
+parchment_version=2024.05.01
 
 # fabric
 fabric_loader_version=0.15.11
@@ -21,7 +22,7 @@ modmenu_version=10.0.0-beta.1
 
 # forge
 forge_version=49.0.2
-neoforge_version=20.5.0-beta
+neoforge_version=20.6.63-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
