port to 1.21 (fabric only)

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.parallel=true
 org.gradle.warning.mode=all
 
-minecraft_version=1.20.6
-enabled_platforms=fabric,neoforge
+minecraft_version=1.21
+enabled_platforms=fabric
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -14,7 +14,7 @@ maven_group=dzwdz
 java_version=21
 cloth_config_version=14.0.126
 mixinextras_version=0.3.5
-parchment_version=2024.05.01
+parchment_version=
 
 # fabric
 fabric_loader_version=0.15.11
@@ -27,11 +27,11 @@ neoforge_version=20.6.63-beta
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
-fabric_game_version_range=>=1.20.5
-fabric_game_versions=1.20.5, 1.20.6
-forge_game_version_range=[1.20.6,)
-forge_game_versions=1.20.6
-neoforge_game_version_range=[1.20.5,)
-neoforge_game_versions=1.20.5, 1.20.6
+fabric_game_version_range=>=1.21
+fabric_game_versions=1.21
+forge_game_version_range=[1.21,)
+forge_game_versions=1.21
+neoforge_game_version_range=[1.21,)
+neoforge_game_versions=1.21
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
