--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.parallel=true
 org.gradle.warning.mode=all
 
 minecraft_version=1.21
-enabled_platforms=fabric
+enabled_platforms=fabric,neoforge
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -22,7 +22,7 @@ modmenu_version=10.0.0-beta.1
 
 # forge
 forge_version=49.0.2
-neoforge_version=20.6.63-beta
+neoforge_version=21.0.0-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
