use fabric/neoforge mixinextras annotator

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,16 +13,16 @@ maven_group=dzwdz
 # common
 java_version=21
 cloth_config_version=14.0.126
-mixinextras_version=0.3.5
-parchment_version=
+mixinextras_version=0.3.6
+parchment_version=2024.07.07
 
 # fabric
 fabric_loader_version=0.15.11
 modmenu_version=10.0.0-beta.1
 
-# forge
+# (neo)forge
 forge_version=49.0.2
-neoforge_version=21.0.0-beta
+neoforge_version=21.0.75-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
