update neoforge (fix broken config gui)

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,17 +12,17 @@ maven_group=dzwdz
 
 # common
 java_version=21
-cloth_config_version=15.0.127
-mixinextras_version=0.3.6
-parchment_version=2024.07.07
+cloth_config_version=15.0.128
+mixinextras_version=0.4.0
+parchment_version=2024.07.28
 
 # fabric
 fabric_loader_version=0.15.11
-modmenu_version=10.0.0-beta.1
+modmenu_version=11.0.1
 
 # (neo)forge
 forge_version=49.0.2
-neoforge_version=21.0.75-beta
+neoforge_version=21.0.164
 
 # publishing
 modrinth_id=Wb5oqrBJ
