--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.parallel=true
 org.gradle.warning.mode=all
 
 minecraft_version=1.21
-enabled_platforms=fabric,neoforge
+enabled_platforms=fabric,neoforge,forge
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -12,8 +12,8 @@ maven_group=dzwdz
 
 # common
 java_version=21
-cloth_config_version=15.0.128
-mixinextras_version=0.4.0
+cloth_config_version=15.0.130
+mixinextras_version=0.4.1
 parchment_version=2024.07.28
 
 # fabric
@@ -21,7 +21,7 @@ fabric_loader_version=0.15.11
 modmenu_version=11.0.1
 
 # (neo)forge
-forge_version=49.0.2
+forge_version=51.0.33
 neoforge_version=21.0.164
 
 # publishing
