update version list

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,10 +28,10 @@ neoforge_version=21.0.164
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
 fabric_game_version_range=>=1.21
-fabric_game_versions=1.21
+fabric_game_versions=1.21, 1.21.1
 forge_game_version_range=[1.21,)
-forge_game_versions=1.21
+forge_game_versions=1.21, 1.21.1
 neoforge_game_version_range=[1.21,)
-neoforge_game_versions=1.21
+neoforge_game_versions=1.21, 1.21.1
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
