--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.parallel=true
 org.gradle.warning.mode=all
 
-minecraft_version=1.21
-enabled_platforms=fabric,neoforge,forge
+minecraft_version=1.21.2
+enabled_platforms=fabric,neoforge
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -12,26 +12,26 @@ maven_group=dzwdz
 
 # common
 java_version=21
-cloth_config_version=15.0.130
+cloth_config_version=16.0.141
 mixinextras_version=0.4.1
-parchment_version=2024.07.28
+parchment_version=
 
 # fabric
-fabric_loader_version=0.15.11
-modmenu_version=11.0.1
+fabric_loader_version=0.16.7
+modmenu_version=12.0.0-beta.1
 
 # (neo)forge
 forge_version=51.0.33
-neoforge_version=21.0.164
+neoforge_version=21.2.1-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
-fabric_game_version_range=>=1.21
-fabric_game_versions=1.21, 1.21.1
-forge_game_version_range=[1.21,)
-forge_game_versions=1.21, 1.21.1
-neoforge_game_version_range=[1.21,)
-neoforge_game_versions=1.21, 1.21.1
+fabric_game_version_range=>=1.21.2
+fabric_game_versions=1.21.2
+forge_game_version_range=[1.21.2,)
+forge_game_versions=1.21.2
+neoforge_game_version_range=[1.21.2,)
+neoforge_game_versions=1.21.2
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
