update version range

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,11 +27,11 @@ neoforge_version=21.2.1-beta
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
-fabric_game_version_range=>=1.21.2
-fabric_game_versions=1.21.2
-forge_game_version_range=[1.21.2,)
-forge_game_versions=1.21.2
-neoforge_game_version_range=[1.21.2,)
-neoforge_game_versions=1.21.2
+fabric_game_version_range=>=1.21.2 <=1.21.3
+fabric_game_versions=1.21.2, 1.21.3
+forge_game_version_range=[1.21.2, 1.21.3]
+forge_game_versions=1.21.2, 1.21.3
+neoforge_game_version_range=[1.21.2, 1.21.3]
+neoforge_game_versions=1.21.2, 1.21.3
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
