--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.parallel=true
 org.gradle.warning.mode=all
 
-minecraft_version=1.21.2
+minecraft_version=1.21.4
 enabled_platforms=fabric,neoforge
 
 mod_id=chat_heads
@@ -12,26 +12,26 @@ maven_group=dzwdz
 
 # common
 java_version=21
-cloth_config_version=16.0.141
+cloth_config_version=17.0.142
 mixinextras_version=0.4.1
 parchment_version=
 
 # fabric
-fabric_loader_version=0.16.7
+fabric_loader_version=0.16.9
 modmenu_version=12.0.0-beta.1
 
 # (neo)forge
 forge_version=51.0.33
-neoforge_version=21.2.1-beta
+neoforge_version=21.4.9-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
-fabric_game_version_range=>=1.21.2 <=1.21.3
-fabric_game_versions=1.21.2, 1.21.3
-forge_game_version_range=[1.21.2, 1.21.3]
-forge_game_versions=1.21.2, 1.21.3
-neoforge_game_version_range=[1.21.2, 1.21.3]
-neoforge_game_versions=1.21.2, 1.21.3
+fabric_game_version_range=>=1.21.4
+fabric_game_versions=1.21.4
+forge_game_version_range=[1.21.4,)
+forge_game_versions=1.21.4
+neoforge_game_version_range=[1.21.4,)
+neoforge_game_versions=1.21.4
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
