--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.parallel=true
 org.gradle.warning.mode=all
 
 minecraft_version=1.21.4
-enabled_platforms=fabric,neoforge
+enabled_platforms=fabric,forge,neoforge
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -12,17 +12,17 @@ maven_group=dzwdz
 
 # common
 java_version=21
-cloth_config_version=17.0.142
+cloth_config_version=17.0.144
 mixinextras_version=0.4.1
 parchment_version=
 
 # fabric
 fabric_loader_version=0.16.9
-modmenu_version=12.0.0-beta.1
+modmenu_version=12.0.0
 
 # (neo)forge
-forge_version=51.0.33
-neoforge_version=21.4.9-beta
+forge_version=54.0.16
+neoforge_version=21.4.49-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
