--- a/gradle.properties
+++ b/gradle.properties
@@ -27,11 +27,11 @@ neoforge_version=21.4.49-beta
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
-fabric_game_version_range=>=1.21.4
+fabric_game_version_range=>=1.21.4 <1.21.5
 fabric_game_versions=1.21.4
-forge_game_version_range=[1.21.4,)
+forge_game_version_range=[1.21.4, 1.21.5)
 forge_game_versions=1.21.4
-neoforge_game_version_range=[1.21.4,)
+neoforge_game_version_range=[1.21.4, 1.21.5)
 neoforge_game_versions=1.21.4
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
