--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.parallel=true
 org.gradle.warning.mode=all
 
-minecraft_version=1.21.4
-enabled_platforms=fabric,forge,neoforge
+minecraft_version=1.21.5
+enabled_platforms=fabric,neoforge
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -22,16 +22,16 @@ modmenu_version=12.0.0
 
 # (neo)forge
 forge_version=54.0.16
-neoforge_version=21.4.49-beta
+neoforge_version=21.5.0-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
-fabric_game_version_range=>=1.21.4 <1.21.5
-fabric_game_versions=1.21.4
-forge_game_version_range=[1.21.4, 1.21.5)
-forge_game_versions=1.21.4
-neoforge_game_version_range=[1.21.4, 1.21.5)
-neoforge_game_versions=1.21.4
+fabric_game_version_range=>=1.21.5
+fabric_game_versions=1.21.5
+forge_game_version_range=[1.21.5,)
+forge_game_versions=1.21.5
+neoforge_game_version_range=[1.21.5,)
+neoforge_game_versions=1.21.5
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
