update version range

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,11 +27,11 @@ neoforge_version=21.6.5-beta
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
-fabric_game_version_range=>=1.21.6
-fabric_game_versions=1.21.6
-forge_game_version_range=[1.21.6,)
-forge_game_versions=1.21.6
-neoforge_game_version_range=[1.21.6,)
-neoforge_game_versions=1.21.6
+fabric_game_version_range=>=1.21.6 <=1.21.8
+fabric_game_versions=1.21.6, 1.21.7, 1.21.8
+forge_game_version_range=[1.21.6, 1.21.8]
+forge_game_versions=1.21.6, 1.21.7, 1.21.8
+neoforge_game_version_range=[1.21.6, 1.21.8]
+neoforge_game_versions=1.21.6, 1.21.7, 1.21.8
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
