port to (fabric) 1.21.9-rc1, rewrite almost the entire thing (see changelog)

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.parallel=true
 org.gradle.warning.mode=all
 
-minecraft_version=1.21.6
-enabled_platforms=fabric,neoforge
+minecraft_version=1.21.9
+enabled_platforms=fabric
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -13,11 +13,11 @@ maven_group=dzwdz
 # common
 java_version=21
 cloth_config_version=17.0.144
-mixinextras_version=0.4.1
+mixinextras_version=0.5.0
 parchment_version=
 
 # fabric
-fabric_loader_version=0.16.14
+fabric_loader_version=0.17.2
 modmenu_version=12.0.0
 
 # (neo)forge
@@ -27,11 +27,11 @@ neoforge_version=21.6.5-beta
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
-fabric_game_version_range=>=1.21.6 <=1.21.8
-fabric_game_versions=1.21.6, 1.21.7, 1.21.8
-forge_game_version_range=[1.21.6, 1.21.8]
-forge_game_versions=1.21.6, 1.21.7, 1.21.8
-neoforge_game_version_range=[1.21.6, 1.21.8]
-neoforge_game_versions=1.21.6, 1.21.7, 1.21.8
+fabric_game_version_range=>=1.21.9
+fabric_game_versions=1.21.9
+forge_game_version_range=[1.21.9,)
+forge_game_versions=1.21.9
+neoforge_game_version_range=[1.21.9,)
+neoforge_game_versions=1.21.9
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
