add auto-alias feature for /realname on EssentialsX servers

--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,11 @@ subprojects {
     loom {
         silentMojangMappingsLicense()
 
-        runClient {
-            jvmArgs('-Dmixin.debug.export=true')
+        runs {
+            client {
+                vmArgs "-Dmixin.debug.export=true"
+                programArgs "--username", "Player"
+            }
         }
     }
 
