port to neoforge

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.parallel=true
 org.gradle.warning.mode=all
 
 minecraft_version=1.21.9
-enabled_platforms=fabric
+enabled_platforms=fabric,neoforge
 
 mod_id=chat_heads
 archives_base_name=chat_heads
@@ -22,7 +22,7 @@ modmenu_version=12.0.0
 
 # (neo)forge
 forge_version=54.0.16
-neoforge_version=21.6.5-beta
+neoforge_version=21.9.0-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
