--- a/build.gradle
+++ b/build.gradle
@@ -128,6 +128,7 @@ subprojects {
                 changelog = changelogMd
 
                 addGameVersion capitalizedLoader
+                addGameVersion 'Client'
                 projectGameVersions.each{ addGameVersion(it) }
 
                 relations {
