--- a/gradle.properties
+++ b/gradle.properties
@@ -12,13 +12,13 @@ maven_group=dzwdz
 
 # common
 java_version=21
-cloth_config_version=17.0.144
+cloth_config_version=20.0.148
 mixinextras_version=0.5.0
 parchment_version=
 
 # fabric
 fabric_loader_version=0.17.2
-modmenu_version=12.0.0
+modmenu_version=16.0.0-rc.1
 
 # (neo)forge
 forge_version=54.0.16
