--- a/gradle.properties
+++ b/gradle.properties
@@ -27,11 +27,11 @@ neoforge_version=21.9.0-beta
 # publishing
 modrinth_id=Wb5oqrBJ
 curseforge_id=407206
-fabric_game_version_range=>=1.21.9
+fabric_game_version_range=>=1.21.9 <1.21.11
 fabric_game_versions=1.21.9, 1.21.10
-forge_game_version_range=[1.21.9,)
+forge_game_version_range=[1.21.9, 1.21.11)
 forge_game_versions=1.21.9, 1.21.10
-neoforge_game_version_range=[1.21.9,)
+neoforge_game_version_range=[1.21.9, 1.21.11)
 neoforge_game_versions=1.21.9, 1.21.10
 optional_modrinth_dependencies=9s6osm5g
 optional_curseforge_dependencies=cloth-config
