add fabric_loader_version_range, use newer "cloth-config" id

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,17 +12,18 @@ maven_group=dzwdz
 
 # common
 java_version=21
-cloth_config_version=21.11.151
+cloth_config_version=21.11.153
 mixinextras_version=0.5.0
 parchment_version=
 
 # fabric
-fabric_loader_version=0.18.2
+fabric_loader_version=0.18.4
+fabric_loader_version_range=>=0.17.3
 modmenu_version=17.0.0-alpha.1
 
 # (neo)forge
 forge_version=54.0.16
-neoforge_version=21.11.6-beta
+neoforge_version=21.11.26-beta
 
 # publishing
 modrinth_id=Wb5oqrBJ
